--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -1,38 +1,79 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	font-family: sans-serif;
+	background-color: #f2f2f2;
+}
+
 nav {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 5%;
-  }
-  
-  h2 {
-    margin: 10px;
-  }
-  
-  .nav-list {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  }
-  
-  .nav-item {
-    width: 100%;
-    text-align: center;
-  }
-  
-  .nav-link {
-    display: block;
-    padding: 10px;
-    color: #fff;
-    text-decoration: none;
-    text-align: center;
-    background-color: #333;
-    border-bottom: 1px solid #222;
-  }
-  
-  .nav-link:hover {
-    background-color: #444;
-  }
+	background-color: #333;
+	color: #fff;
+	padding: 1rem;
+}
+
+nav ul {
+	list-style: none;
+	display: flex;
+	align-items: center;
+}
+
+nav li {
+	margin-right: 1rem;
+}
+
+nav a {
+	color: #fff;
+	text-decoration: none;
+	font-size: 1.2rem;
+}
+
+main {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  position: absolute;
+	grid-template-rows: 1fr;
+	grid-gap: 1rem;
+	padding: 2rem;
+  top: 50px;
+  right: 0;
+  bottom: 50px;
+  left: 0;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  position: absolute;
+  top: 60px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.grid-item {
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ddd;
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h2 {
+	font-size: 1.5rem;
+	margin-bottom: 1rem;
+}
+
+p {
+	font-size: 1rem;
+	line-height: 1.5;
+}
+
   
