--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -77,3 +77,21 @@ p {
 }
 
   
+#finances {
+	border-collapse: collapse;
+	width: 100%;
+	height: 300px; 
+	overflow-y: scroll;
+  }
+  
+  th, td {
+	text-align: left;
+	padding: 8px;
+	border-bottom: 1px solid #ddd;
+  }
+  
+  th {
+	background-color: #4CAF50;
+	color: white;
+  }
+ 
