--- a/login/style.css
+++ b/login/style.css
@@ -1,3 +1,50 @@
+/* .logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 5%;
+  background-color: rgb(235, 191, 191);
+} */
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 60%;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #ccc;
+}
+
+form {
+  flex: 1;
+  margin-right: 20px;
+}
+
+img.img-fluid {
+  max-width: 50%;
+  height: auto;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 0;
+}
+
+.heading {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.logo {
+  max-width: 100px;
+  margin-bottom: 20px;
+}
+
+
 body {
     font-family: Arial, sans-serif;
   }
