--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -3,8 +3,83 @@
 	top: 0;
 	left: 0;
 	height: 5%;
-	background-color: rgb(235, 191, 191);
+	background-color: rgb(146, 86, 86);
   }
+
+  /* Set general styles */
+body {
+	margin: 0;
+	padding: 0;
+	font-family: Arial, sans-serif;
+  }
+  
+  .chart-container {
+	width: 400px;
+	height: 400px;
+	margin: 0 auto;
+  }
+  
+  /* Navbar styles */
+  nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+	background-color: #f8f8f8;
+  }
+  
+  .navbar-brand {
+	display: inline-block;
+	width: 100px;
+	height: 50px;
+	background-image: url("D:/Capstone Project/logo.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+  }
+  
+  .navbar-nav {
+	display: flex;
+	justify-content: flex-end;
+  }
+  
+  .nav-link {
+	margin-left: 20px;
+	text-decoration: none;
+	color: #db8787;
+	font-weight: bold;
+  }
+  
+  .nav-link:hover {
+	text-decoration: underline;
+  }
+  
+  /* Grid styles */
+  .grid {
+	border-radius: 10px;
+	border: 1px solid #ccc;
+	margin: 20px;
+	padding: 20px;
+  }
+  
+  /* Table styles */
+  #finances {
+	width: 100%;
+	max-height: 400px;
+	overflow-y: scroll;
+  }
+  
+  #finances th, #finances td {
+	padding: 10px;
+	text-align: left;
+	border: 1px solid #ccc;
+	color: #333;
+  }
+  
+  #finances th {
+	background-color: #f8f8f8;
+	font-weight: bold;
+  }
+  
   
 
 
