--- a/ForgotPassword/style.css
+++ b/ForgotPassword/style.css
@@ -1,3 +1,72 @@
+body {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 5%;
+  background-color: rgb(235, 191, 191);
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #deb0b0;
+  padding: 50px;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(246, 192, 192, 0.2);
+  
+}
+
+.heading{
+  text-align: center;
+  margin-top: 0;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
+}
+
+form label {
+  margin-top: 10px;
+}
+
+form input[type="email"],
+form input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+form button[type="submit"] {
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+form button[type="submit"]:hover {
+  background-color: #0069d9;
+}
+
+
 form {
     display: flex;
     flex-direction: column;
