--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -6,6 +6,43 @@
 	background-color: rgb(146, 86, 86);
   }
 
+
+  .navbar {
+	background-color: #ff0000; /* Change the background color to red */
+  }
+  
+  .navbar-brand, .navbar-nav .nav-link {
+	color: #ffffff !important; /* Change the text color to white */
+  }
+
+  table tr {
+	border: 2px solid black;
+
+  }
+  
+  canvas {
+	border: 2px solid black;
+  }
+  
+
+  .container {
+	display: flex;
+	flex-wrap: wrap;
+	border-color: #333;
+  }
+  
+  .container > * {
+	flex: 1 1 auto;
+  }
+section.grid{
+	overflow-y: scroll;
+	max-height: 500px;
+	background-color: #ccc;
+	border:2px solid #333;
+
+}  
+
+
   /* Set general styles */
 body {
 	margin: 0;
@@ -15,17 +52,28 @@ body {
   
   .chart-container {
 	width: 400px;
-	height: 400px;
+	height: 430px;
 	margin: 0 auto;
+	/* border-color: #333; */
   }
   
+  .table-container{
+	overflow-y: scroll;
+	height: 300px;
+
+  }
+
+
+  .modal-body{
+	justify-content: center;
+  }
   /* Navbar styles */
   nav {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px;
-	background-color: #f8f8f8;
+	background-color: #ccc;
   }
   
   .navbar-brand {
@@ -62,26 +110,36 @@ body {
   }
   
   /* Table styles */
-  #finances {
+ #finances {
 	width: 100%;
 	max-height: 400px;
 	overflow-y: scroll;
-  }
+  } 
   
-  #finances th, #finances td {
+ #finances th, #finances td {
 	padding: 10px;
 	text-align: left;
-	border: 1px solid #ccc;
+	border: 1px solid #cd4343;
 	color: #333;
   }
   
-  #finances th {
-	background-color: #f8f8f8;
+   #finances th {
+	background-color: #c14444;
 	font-weight: bold;
+  } 
+  
+  
+  .modal.fade .modal-dialog {
+	-webkit-transform: translate(0, -50%);
+	transform: translate(0, -50%);
+	-webkit-transition: -webkit-transform 0.3s ease-out;
+	transition: transform 0.3s ease-out;
+  }
+  .modal.fade.in .modal-dialog {
+	-webkit-transform: translate(0, 0);
+	transform: translate(0, 0);
   }
   
-  
-
 
 * {
 	margin: 0;
@@ -89,16 +147,7 @@ body {
 	box-sizing: border-box;
 }
 
-body {
-	font-family: sans-serif;
-	background-color: #f2f2f2;
-}
 
-nav {
-	background-color: #333;
-	color: #fff;
-	padding: 1rem;
-}
 
 nav ul {
 	list-style: none;
@@ -139,6 +188,14 @@ grid-gap: 1rem;
   bottom: 0;
   left: 0;
 }
+.income-row {
+    background-color: #91e8d9; /* light red */
+}
+
+.expense-row {
+    background-color: #f4bbbb; /* light green */
+}
+
 
 .grid-item {
   background-color: #fff;
@@ -161,21 +218,16 @@ p {
 }
 
   
-#finances {
-	border-collapse: collapse;
-	width: 100%;
-	height: 300px; 
-	overflow-y: scroll;
-  }
   
   th, td {
 	text-align: left;
 	padding: 8px;
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid #d75b5b;
   }
   
   th {
 	background-color: #4CAF50;
-	color: white;
+	color: rgb(25, 6, 6);
+	border-color: #333;
   }
  
