--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -63,10 +63,35 @@ body {
 
   }
 
+  .modal-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  .modal-body{
-	justify-content: center;
-  }
+
+
+.form-label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+label {
+  margin-bottom: 5px;
+}
+
+select, input {
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.btn-primary {
+  margin-top: 20px;
+}
+
+
   /* Navbar styles */
   nav {
 	display: flex;
@@ -231,3 +256,5 @@ p {
 	border-color: #333;
   }
  
+
+  
